Added all of my classes and formatted it nicely, and added a main university area to the teaching.html main page

--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -5,10 +5,17 @@ permalink: /teaching/
 author_profile: true
 ---
 
+<h2>Michigan State University</h2>
+
+<ul>
+  <li><strong>Expected Graduation</strong>: Fall 2026</li>
+  <li><strong>Major</strong>: Computer Engineering</li>
+  <li><strong>Minor</strong>: Data Science</li>
+  <li><strong>Career Interests</strong>: Hardware engineering, circuit design, autonomous systems</li>
+</ul>
+
 {% include base_path %}
 
 {% for post in site.teaching reversed %}
   {% include archive-single.html %}
 {% endfor %}
-
-hello
