Added logic to display specific content only on the unversity coursework page, created a new html layout for the university coursework page, updated the 2015-spring-teaching-2.md file to use the new markdown file for rendering.

--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -14,6 +14,11 @@ author_profile: true
   <li><strong>Career Interests</strong>: Hardware engineering, circuit design, autonomous systems</li>
 </ul>
 
+{% if page.url == "/teaching/university-coursework/" %}
+  <h2>University Coursework</h2>
+  <p>Below I have listed all of the courses I have taken or will be taking throughout my time in university so far, from most recent to oldest.</p>
+{% endif %}
+
 {% include base_path %}
 
 {% for post in site.teaching reversed %}
