added image to education page

--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -5,14 +5,20 @@ permalink: /teaching/
 author_profile: true
 ---
 
-<h2>Michigan State University</h2>
-
-<ul>
-  <li><strong>Expected Graduation</strong>: Fall 2026</li>
-  <li><strong>Major</strong>: Computer Engineering</li>
-  <li><strong>Minor</strong>: Data Science</li>
-  <li><strong>Career Interests</strong>: Hardware engineering, circuit design, autonomous systems</li>
-</ul>
+<div style="display: flex; align-items: flex-start;">
+  <div style="flex: 1;">
+    <h2>Michigan State University</h2>
+    <ul>
+      <li><strong>Expected Graduation</strong>: Fall 2026</li>
+      <li><strong>Major</strong>: Computer Engineering</li>
+      <li><strong>Minor</strong>: Data Science</li>
+      <li><strong>Career Interests</strong>: Hardware engineering, circuit design, autonomous systems</li>
+    </ul>
+  </div>
+  <div style="flex: 1; text-align: right;">
+    <img src="/images/tech1.png" alt="Image Description" style="max-width: 100%; height: auto;" />
+  </div>
+</div>
 
 {% include base_path %}
 
