--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -16,7 +16,7 @@ author_profile: true
     </ul>
   </div>
   <div style="flex: 1; text-align: right;">
-    <img src="/images/tech1.png" alt="Image Description" style="max-width: 100%; height: auto;" />
+    <img src="/images/tech1 (2).png" alt="Image Description" style="max-width: 100%; height: auto;" />
   </div>
 </div>
 
