edited career interests in teaching.html to be a sublist instead of a comma list for better website aesthetics

--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -1,10 +1,3 @@
----
-layout: archive
-title: "Education"
-permalink: /teaching/
-author_profile: true
----
-
 <div style="display: flex; align-items: flex-start;">
   <div style="flex: 1;">
     <h2>Michigan State University</h2>
@@ -12,7 +5,13 @@ author_profile: true
       <li><strong>Expected Graduation</strong>: Fall 2026</li>
       <li><strong>Major</strong>: Computer Engineering</li>
       <li><strong>Minor</strong>: Data Science</li>
-      <li><strong>Career Interests</strong>: Hardware engineering, circuit design, autonomous systems</li>
+      <li><strong>Career Interests</strong>:
+        <ul>
+          <li>Hardware engineering</li>
+          <li>Circuit design</li>
+          <li>Autonomous systems</li>
+        </ul>
+      </li>
     </ul>
   </div>
   <div style="flex: 1; text-align: right;">
