--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -1,3 +1,10 @@
+---
+layout: archive
+title: "Education"
+permalink: /teaching/
+author_profile: true
+---
+
 <div style="display: flex; align-items: flex-start;">
   <div style="flex: 1;">
     <h2>Michigan State University</h2>
