Updated website sidebar descriptions

--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -7,16 +7,15 @@ author_profile: true
 
 <div style="display: flex; align-items: flex-start;">
   <div style="flex: 1;">
-    <h2>Michigan State University</h2>
+    <h2>University of Michigan</h2>
     <ul>
-      <li><strong>Expected Graduation</strong>: Fall 2026</li>
+      <li><strong>Expected Graduation</strong>: June 2027</li>
       <li><strong>Major</strong>: Computer Engineering</li>
-      <li><strong>Minor</strong>: Data Science</li>
       <li><strong>Career Interests</strong>:
         <ul>
-          <li>Hardware engineering</li>
-          <li>Circuit design</li>
-          <li>Autonomous systems</li>
+          <li>VLSI Chip Design</li>
+          <li>Embedded Systems</li>
+          <li>Hardware Engineering</li>
         </ul>
       </li>
     </ul>
